<resources>
    <string name="app_name">NY Times</string>
    <string name="action_settings">Settings</string>
    <string name="action_science">Science</string>
    <string name="action_technology">Technology</string>
    <string name="action_business">Business</string>
    <string name="action_world">World</string>
    <string name="action_movies">Movies</string>
    <string name="action_travel">Travel</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please try again</string>
    <string name="network_internal_error">Our systems got an error, please try again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time</string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
</resources>
